# silhouette

./: .gitignore  Makefile  binmask.hd
bg_subtract/: CMakeLists.txt
bg_subtract/src/: main.cpp
mesh_gen/: Makefile  main.c
pcd_write/: CMakeLists.txt  pcd_write.cpp  tri_mesh.cpp
